# Polyhymnia

./: .clang-format  .gitignore  .prettierignore  README.md  docker-compose.images.yml  docker-compose.yml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_request.md  feature_request.md  question.md
.github/workflows/: docker-compose-check.yml  release.yml
cpp-engine/: CMakeLists.txt
cpp-engine/src/: main.cpp
docker/cpp-engine/: Dockerfile
docker/frontend/: Dockerfile
docker/go-gateway/: Dockerfile
docker/rust-db/: Dockerfile
docs/: CONTRIBUTING.md  api.md  architecture.md  installation.md  quickstart.md  troubleshooting.md
frontend/: app.js  index.html  styles.css
go-gateway/: go.mod  main.go
go-gateway/proto/: generate.go
proto/: quote.proto
rust-db/: Cargo.toml  build.rs
rust-db/src/: main.rs
