[package]
name = "rust-db"
version = "0.1.0"
edition = "2021"
description = "Polyhymnia database & safety layer — owns quotes.db and exposes it over gRPC."

[[bin]]
name = "rust-db"
path = "src/main.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11"
